k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinook-spring-boot-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chinook-app
  template:
    metadata:
      labels:
        app: chinook-app
    spec:
      serviceAccountName: chinook-app-svcacc
      containers:
        - name: java
          image: farthvader/chinook:v0.2
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL proxy
          # Make sure to update on a regular schedule!
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
          - "/cloud_sql_proxy"
          - "-instances=chinook-app:us-central1:chinook-db=tcp:5432"
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: false
