k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chinook-spring-boot
spec:
  serviceAccountName: chinook-app-svcacc
  containers:
  - name: java
    image: farthvader/chinook:v0.2
    imagePullPolicy: Always
  - name: cloud-sql-proxy
    # It is recommended to use the latest version of the Cloud SQL proxy
    # Make sure to update on a regular schedule!
    image: gcr.io/cloudsql-docker/gce-proxy:1.17
    command:
    - "/cloud_sql_proxy"

    # If connecting from a VPC-native GKE cluster, you can use the
    # following flag to have the proxy connect over private IP
    # - "-ip_address_types=PRIVATE"

    # Replace DB_PORT with the port the proxy should listen on
    # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
    - "-instances=chinook-app:us-central1:chinook-db=tcp:5432"
    securityContext:
      # The default Cloud SQL proxy image runs as the
      # "nonroot" user and group (uid: 65532) by default.
      runAsNonRoot: false
