k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chinook-svc
  labels:
    app: chinook-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: chinook-app
