k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chinook-ingress
spec:
  backend:
    serviceName: chinook-svc
    servicePort: 80
